--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "typings": "typings.d.ts",
   "scripts": {
     "esm_test": "node ./test/esm/test.js",
-    "cjs_test": "node ./test/cjs/test.js"
+    "cjs_test": "node ./test/cjs/test.js",
+    "test": "node test/index.js"
   },
   "keywords": [
     "cf-bypass",
@@ -38,6 +39,7 @@
   "author": "zfc-software",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "chrome-launcher": "^1.1.2",
     "ghost-cursor": "^1.3.0",
     "puppeteer-extra": "^3.3.6",
